2013-08-13 Miguel de Dios  <miguel.dedios@artica.es>
	
	* operation/side_menu.php,
	operation/user_report/user_project_timegraph.php: added the graph
	of times in each project and task for filtered user.
	
	* include/functions_user.php: added function "user_get_projects".
	
	* include/functions_graph.php: added function
	"print_project_user_timegraph" for the user project graph, and
	added common function "print_project_timegraph". Changed the
	code of function "print_project_user_timegraph" to use the previos
	new function.
	
	* include/functions_html.php: improved the source code style.

2013-08-13 Miguel de Dios  <miguel.dedios@artica.es>
	
	* include/functions_db.php: into the function
	"get_task_workunit_hours_user" added parameters for extract the
	workunit hours from a period.
	
	* include/js/d3.v3.js, include/functions_graph.php, index.php,
	operation/projects/project_timegraph.php, operation/side_menu.php:
	added first of time graph that group the task of project and each
	cell is the user hours and size in hours.

2013-08-12  Vanessa Gil <vanessa.gil@artica.es>

	* include/functions_inventories.php
	  include/styles/integria.css: Added info about stock
	in inventory search.

2013-08-12 Miguel de Dios  <miguel.dedios@artica.es>
	
	* index.php: fixed call to unexist function "session_unregister"
	that makes PHP error.

2013-08-12 Miguel de Dios  <miguel.dedios@artica.es>
	
	* operation/projects/people_manager.php: fixed the PHP warnings.

2013-08-12 Miguel de Dios  <miguel.dedios@artica.es>
	
	* operation/projects/task.php, include/functions_form.php: fixed the
	PHP warnings.

2013-08-12 Miguel de Dios  <miguel.dedios@artica.es>
	
	* include/functions_user.php: fixed the PHP warnings about vars
	without value.

2013-08-12 Miguel de Dios  <miguel.dedios@artica.es>
	
	* operation/users/user_spare_workunit.php: fixed PHP warnings.

2013-08-12 Miguel de Dios  <miguel.dedios@artica.es>
	
	* operation/projects/task_planning.php,